refactor: 불변 객체 반환 -> 가변 객체 반환 수정